--- a/hw4/css/all.css
+++ b/hw4/css/all.css
@@ -4,7 +4,7 @@ body {
     text-align: center;
 }
 
-body {
+.login {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,4 +15,7 @@ body {
     max-width: 330px;
     padding: 15px;
     margin: auto;
+}
+.page-disabled {
+    pointer-events : none;
 }
